--- a/AspDotNetDataDownloader/AspDotNetDataDownloader.csproj
+++ b/AspDotNetDataDownloader/AspDotNetDataDownloader.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataDownloader.cs" />
+    <Compile Include="DocumentParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
